--- a/Assignments/Assignment02/Question5.html
+++ b/Assignments/Assignment02/Question5.html
@@ -29,7 +29,7 @@ var VSHADER_SOURCE =
   'uniform float u_CosB, u_SinB; \n' + //marked 
   'void main() {\n' +
   ' gl_Position = a_Position + u_Translation;\n' +
-  ' gl_Position = a_Position * u_scale;\n' + // This for some reason removes the triangle 
+  ' gl_Position = a_Position * u_scale;\n' + // This for some reason removes the triangle (Attempted scale)
   ' gl_Position.x = a_Position.x * u_CosB - a_Position.y * u_SinB;\n' + // Equation to grab our x 
   ' gl_Position.y = a_Position.x * u_SinB + a_Position.y * u_CosB;\n' + // Equation to grab our y 
   ' gl_Position.z = a_Position.z;\n' + // Z stays the same 
