--- a/Assignments/Assignment3/question2.html
+++ b/Assignments/Assignment3/question2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Unsure on how to implement this. Description is in the github comments-->
 <head>
     <meta charset="utf-8"/>
     <title>Translate a Triangle</title>
