--- a/Assignments/Assignment3/question1.html
+++ b/Assignments/Assignment3/question1.html
@@ -14,7 +14,7 @@
     draw()  (POINTS)
 
     If (var i = o; n >= canvas (size of canvas); i++) {
-        n == 0.0; 
+        n == 0.0; (set points back to 0)
 
     }
 
